# OctoQuad

./: README.md
code_examples/Android/OctoQuadAndroid/: settings.gradle
code_examples/Android/OctoQuadAndroid/app/: build.gradle
code_examples/Android/OctoQuadAndroid/app/src/main/: AndroidManifest.xml
code_examples/Android/OctoQuadAndroid/app/src/main/res/layout/: activity_main.xml
code_examples/Android/OctoQuadAndroid/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
code_examples/Android/OctoQuadAndroid/gradle/wrapper/: gradle-wrapper.properties
code_examples/Arduino/ArduinoSpiI2cExample/: ArduinoSpiI2cExample.ino  octoquad.c  octoquad.h
code_examples/FTC/: DeadwheelCalibrator.java  HeadingScalarCalibrator.java  LocalizerTest.java  OctoQuadFWv3.java  README.md
code_examples/PC/JavaUsbSerialExample/: .gitignore
code_examples/PC/JavaUsbSerialExample/src/com/octoquad/example/: Main.java
code_examples/RaspberryPi/: RpiI2cExample.py  RpiSpiExample.py
code_examples/RaspberryPi/Rpi_c_SpiI2cExample/: main.c  octoquad.c
code_examples/RpiPico/PicoSpiI2cExample/: .gitignore  CMakeLists.txt  picoUsage.sh
code_examples/RpiPico/PicoSpiI2cExample/src/: main.c  octoquad.c  octoquad.h
code_examples/embedded_driver/: octoquad.c  octoquad.h
firmware/: OctoQuad_Release_FW_2_0_15.uf2  OctoQuad_Release_FW_3_0_10.uf2
mechanical/3D print case/: OctoQuad_1.2_SLA_-_Base.step  OctoQuad_1.2_SLA_-_Base.stl  OctoQuad_1.2_SLA_-_Lid.step  OctoQuad_1.X_FDM_-_Base.step  OctoQuad_1.X_FDM_-_Base.stl  OctoQuad_1.X_FDM_-_Lid.step  OctoQuad_1.X_FDM_-_Lid.stl
(+6 files in other folders)
